syntax = "proto3";
import "Common/ProtoSource/Common.proto";
package HS.Protobuf.MasterTime;

enum MasterTimeProtocl{
	MASTER_TIME_PROTOCL_NONE = 0;
	MASTER_TIME_PROTOCL_REGISTER_TO_MT_REQ = 60001;		// [RegisterToMTRequest]
	MASTER_TIME_PROTOCL_REGISTER_TO_MT_RESP = 60002;	// [RegisterToMTResponse]
	MASTER_TIME_PROTOCL_TIME_SYNC_REQ = 60003;			// [TimeSyncRequest]
	MASTER_TIME_PROTOCL_TIME_SYNC_RESP = 60004;			// [TimeSyncResponse]
}

message RegisterToMTRequest{
	HS.Protobuf.Common.ServerInfoNode serverInfoNode = 1;
}
message RegisterToMTResponse{
	int32 resultCode = 1;
	string resultMsg = 2;
}

message TimeSyncRequest{
	int64 client_send_time  = 1;       
}
message TimeSyncResponse{
	int64 client_send_time = 1;		// T1
    int64 server_receive_time = 2;	// T2
    int64 server_send_time = 3;		// T3
    int32 next_sync_interval = 4;   // 动态调整同步频率
}
